[project]
name = "croncycle-py"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Elaina", email = "GreyElaina@outlook.com"},
]
dependencies = [
    "croniter>=2.0.3",
    "humanize>=4.9.0",
    "loguru>=0.7.2",
    "richuru>=0.1.1",
    "typer>=0.12.3",
    "typing-extensions>=4.11.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = ["croncycle"]

[tool.pdm]
distribution = true
